
* Make sure the email subject field properly encodes underscores and
  question marks.  Submitted by jon787@users.sourceforge.net.

* Only require Authen::SASL as a pre-requisite if SMTP authentication
  is needed.  For some deployments, installing Authen::SASL can be
  inconvenient.

* Support for TestDirector as a supported bug tracking system.
  Submitted by rob_webset@users.sourceforge.net.

* Make sure if an invalid CGI parameter value is specified that its
  value is encoded when displaying the generic error page.  Reported
  by amalakar@users.sourceforge.net.
	
Version 1.9.4

* Emit a javascript warning if the external javascript files could
  not be loaded.  This usually occurs due to apache misconfiguration.

* Allow subversion repositories that communicate using the Subversion
  protocol to be specified in @valid_repositories as
  'svn://my.subversion.server/repos/product/trunk' rather than
  'svn:svn://my.subversion.server/repos/product/trunk'.

* Support subversion diff files which contain "Copied:" entries.

* Improved patch file parsing for handling binary file changes.

* Ensure emails sent contain the header "MIME-Version: 1.0" for
  RFC2045 conformance.  Submitted by Vadim Zeitlin
  <vadz@users.sourceforge.net>.

* CSS cleanups from Kannan Goundan <cakoose@users.sourceforge.net>.

* Bottom coloured row on topic list screen didn't extend across full
  width of browser window if bug-tracking or custom comment metrics
  were defined.  This has now been fixed.

* Place a clear divider between comment blocks on the view topic
  comments screen, as suggested by Nikita V. Borodikhin
  <eliterr@users.sourceforge.net> to minimise confusion.

* The topic comments tab count would incorrectly display the number
  of comment threads rather than the number of comments, when viewing
  the topic text.  This has now been fixed.

* Handle Subversion files which contain @ in the filename.

* Codestriker now behaves correctly under mod_perl when retrieving