@@ -399,6 +399,14 @@ $bugtracker = '';
 $bugtracker = 'http://localhost.localdomain/bugzilla/show_bug.cgi?id=';
 #$bugtracker = '/flyspray_dev/?do=details&id=';
 
+# Some bug tracking systems store details of the files changed under each bug
+# ID.  A generic plugin for bugzilla is scmbug which can be used to link
+# with source control systems such as subversion.  The following flag
+# enables/disables the ability for a user to create a topic by just
+# using a Bug ID.
+#$scmbug_hostname = 'hostname-of-scmbug-daemon';
+#$scmbug_port = 3872;
+
 # LXR database.  Each repository can be optionally mapped to a
 # different LXR deployment.  If a repository has an associated LXR
 # mapping, then create a new entry where the repository string is the
