@@ -20,6 +20,10 @@ Version 1.9.5
 * Support for TestDirector as a supported bug tracking system.
   Submitted by rob_webset@users.sourceforge.net.
 
+* Support for creating reviews by just entering the bug IDs, and
+  retrieving the data from Scmbug.
+  Submitted by rob_webset@users.sourceforge.net.
+
 * Make sure if an invalid CGI parameter value is specified that its
   value is encoded when displaying the generic error page.  Reported
   by amalakar@users.sourceforge.net.
